# imnodes

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Config.cmake.in  IMNODES_NAMESPACE.h  ImGuiStorage.h  README.md  imnodes.cpp  imnodes.h  imnodes_config.h  imnodes_config_or_default.h  imnodes_internal.h  meson.build  node_editor.cpp  node_editor.h  premake5.lua
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
PcapEditor/: CMakeLists.txt  main.cpp  pcap_editor.cpp  pcap_editor.h
PcapEditor/lib/: CMakeLists.txt
PcapEditor/lib/include/: PacketState.hpp  attribute.hpp  concrete_nodes.hpp  defination.hpp  imgui_extensions.h  link.hpp  node.hpp  provider.hpp  utility.hpp
PcapEditor/lib/src/: attribute.cpp  concrete_nodes.cpp  imgui_extensions.cpp  link.cpp  node.cpp  provider.cpp  utility.cpp
cmake/modules/: FindPcapPlusPlus.cmake  FindSDL2.cmake  detect.cmake
dependencies/: CMakeLists.txt  meson.build
dependencies/gl3w/: CMakeLists.txt  meson.build
dependencies/imgui/: CMakeLists.txt
dependencies/imgui-1.82/: meson.build
dependencies/imgui-1.84.2/: CMakeLists.txt
dependencies/imgui-1.87/: imgui_impl_opengl3.cpp
dependencies/nlohmann_json/: CMakeLists.txt
dict/: install_dependencies.sh
example/: CMakeLists.txt  color_node_editor.cpp  graph.h  hello.cpp  main.cpp  meson.build  multi_editor.cpp  save_load.cpp  simple.cpp
example/Dynamite/: GraphFileWriter.h  GraphicalLayout.cpp  JsonGraphFileWriter.cpp  JsonGraphFileWriter.h  block.cpp  block.h  context.cpp  context.h  dynamite.cpp  dynamite.h  dynamite_editor.h  dyndsp_wrapper.cpp  dyndsp_wrapper.h  editor.cpp  editor.h  ex1_scrollbar.cpp  graph.cpp  graph.h  link.h  main.cpp  menubar.cpp  menubar.h  multipanel.cpp  multipanel.h  palette.cpp  palette.h  pyhelper.h  run_test.py  state.cpp  state.h  ui.cpp  ui.h
example/Previous/: blocks.cpp  main.cpp
example/UML/: canvaseditor.h  dynamite.cpp  dynamite.h  main.cpp  menubar.cpp  menubar.h  ui.cpp  ui.h
imnodes/: CMakeLists.txt  imnodes.cpp  imnodes.h
test/: main.cpp  render_test.cpp  test_internals.cpp
